--- a/_drafts/2019-04-30-2019-q1-travel.md
+++ b/_drafts/2019-04-30-2019-q1-travel.md
@@ -4,9 +4,9 @@ layout: post
 category: Travel
 ---
 
-I didn't do a load of travel in the first three months of 2019, mostly due to
-being staffed in Chicago & wanting to spend some time there. Also, there isn't
-a lot of easily accessible hiking in winter!
+After the stay in California, I didn't do a load of travel in the first three
+months of 2019, mostly due to being staffed in Chicago & spending some time
+there. Also, there isn't a lot of easily accessible hiking in winter!
 
 This post covers what I was up to for the first three months of the year, and
 is mostly about Chicago.
@@ -90,7 +90,7 @@ highlights, in no particular order:
   <video style="max-width: 100%; display: block;" autoplay loop muted>
     <source src="{{ "/public/images/2019/q1/msi-avalanche.webm" | relative_url }}" type="video/webm; codecs=vp9">
   </video>
-  <figcaption>Avalance simulation in the Science Storms exhibit.</figcaption>
+  <figcaption>Avalanche simulation in the Science Storms exhibit.</figcaption>
 </figure>
 
 {% include figure.html src="/public/images/2019/q1/msi-mirror-maze.jpg" caption="Mirror maze in Numbers in Nature exhibit." %}
@@ -118,7 +118,7 @@ but I didn't expect the streets to be packed from 7:30 AM.
   caption="The Chicago River is dyed a vibrant green on St Patrick's day."
 %}
 
-### ... spring?
+### ... Spring?
 
 I've been warned that March warm weather in Chicago only lulls you into a false
 sense of security. As I'm writing this it's closer to the end of April & I'm
