--- a/_posts/2018-05-09-nyc.md
+++ b/_posts/2018-05-09-nyc.md
@@ -40,7 +40,7 @@ Saturday played out as a busy day! In order:
 
 Sunday was a quieter day. We spent most of our time in Dumbo (Down Under the
 Manhattan Bridge Overpass), an area in Brooklyn with pretty great views of the
-city. We went to [Grimaldi's pizza](http://www.grimaldis.com/index.html), which
+city. We went to [Grimaldi's pizza](http://www.grimaldis.com/), which
 is one of the old, amazing pizza places in NYC. A walk across the Brooklyn
 Bridge closed out the weekend:
 
